[project]
name = "leaphand-retarget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dex-retargeting>=0.5.0",
    "dynamixel-sdk>=3.8.4",
    "loguru>=0.7.3",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "sapien==3.0.0b0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm>=4.67.1",
    "tyro>=1.0.0",
]
